desktop version done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <main>
     <div class="container">
       <div class="image">
-        <img src="images/illustration-hero.svg" alt="Illustration Hero">
+        <img class="image-desktop" src="images/illustration-hero.svg" alt="Dancing with music on headphones">
+        <img class="image-mobile" src="images/pattern-background-mobile.svg" alt="Dancing with music on headphones">
       </div>
       <div class="description">
         <h1>Order Summary</h1>
@@ -22,10 +23,15 @@
         </p>
       </div>
       <div class="plan">
-        <p>
-          Annual Plan
-        </p>
-        <p>$59.99/year</p>
+        <div class="details">
+          <img src="images/icon-music.svg" alt="">
+          <div class="plan-details">
+            <p>
+              Annual Plan
+            </p>
+            <p>$59.99/year</p>
+          </div>
+        </div>
         <a href="#">Change</a>
       </div>
       <div class="btn">
