new update on html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.github.com/nathanfabio">Nathan Fabio</a>.
+      Coded by <a href="https://www.github.com/nathanfabio" target="_blank">Nathan Fabio</a>.
     </div>
   </main>
   
